# R-Type

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
Src/Client/include/: Client.hpp
Src/Server/: main.cpp
Src/Server/include/: Server.hpp
libs/SFML-2.4.1/: CMakeCache.txt  Makefile  cmake_install.cmake
libs/SFML-2.4.1/lib/: libsfml-audio.so.2.4.1  libsfml-graphics.so.2.4.1  libsfml-network.so.2.4.1  libsfml-system.so.2.4.1  libsfml-window.so.2.4.1
libs/SFML-2.4.1/src/SFML/: Makefile  cmake_install.cmake
libs/SFML-2.4.1/src/SFML/Audio/: Makefile  cmake_install.cmake
libs/SFML-2.4.1/src/SFML/Graphics/: Makefile  cmake_install.cmake
libs/SFML-2.4.1/src/SFML/Network/: Makefile  cmake_install.cmake
libs/SFML-2.4.1/src/SFML/System/: Makefile  cmake_install.cmake
libs/SFML-2.4.1/src/SFML/Window/: Makefile  cmake_install.cmake
srcs/client/: Bullet.cpp  CMakeCache.txt  CMakeLists.txt  Client.cpp  EnnemyShip.cpp  MSGParser.cpp  Makefile  NetworkManager.cpp  PlayerShip.cpp  cmake_install.cmake  main.cpp  r-type-client
srcs/client/includes/: Bullet.hpp  Client.hpp  EnnemyShip.hpp  MSGParser.hpp  NetworkManager.hpp  PlayerShip.hpp  main.hpp
srcs/server/: CMakeCache.txt  CMakeLists.txt  Game.cpp  Games.cpp  Makefile  Monster.cpp  MonsterDynLibHandler.cpp  Player.cpp  Server.cpp  cmake_install.cmake  main.cpp  r-type-server  test
srcs/server/Unix/: UnixDynLibHandler.cpp  Unix_Socket.cpp
srcs/server/Windows/: Win_Socket.cpp
srcs/server/dynLibHandler/: MonsterDynLibHandler.cpp  UnixDynLibHandler.cpp  WindowsDynLibHandler.cpp
srcs/server/includes/: Game.hpp  Games.hpp  IDynLibHandler.hpp  ISocket.hpp  Monster.hpp  MonsterDynLibHandler.hpp  MonsterTemplate.hpp  Player.hpp  Server.hpp  UnixDynLibHandler.hpp  Unix_Socket.hpp  Win_Socket.hpp  WindowsDynLibHandler.hpp  main.hpp
srcs/server/monsters/: Makefile
srcs/server/monsters/FireStingray/: MonsterInfo.cpp
srcs/server/monsters/GreenPanther/: MonsterInfo.cpp
